test/fail/big_heap03.v3
//@execute 0=0; 1=1065353216; 5=2139095040; 15=2139095040; 16=2139095040; 49=2139095040; 55=2139095040; 112=2139095040
var x = init(112, 112);
// TODO: fails because JVM backend cannot split heap init method
def init(r: int, c: int) -> Array<Array<float>> {
	var count = 1f;
	var result = Array<Array<float>>.new(r);
	for (i < r) {
		var a = Array<float>.new(c);
		result[i] = a;
		for (j < c) {
			a[j] = count;
			count *= 3.1f;
		}
	}
	return result;
}

def main(a: int) -> int {
	var sum = 0f;
	for (i < a) {
		for (j < a) {
			sum += x[i][j];
		}
	}
	return int.view(sum);
}
